always show scrollbar to prevent the content from jumping

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -3,6 +3,10 @@
 /*@import 'sass-bootstrap/lib/bootstrap'; */
 /*@import '_utils';*/
 
+body {
+  overflow-y: scroll;
+}
+
 x3d {
   width: 100%;
 }
